k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-dc-1
spec:
  type: ClusterIP
  selector:
    app: rest-dc-1
  ports:
  - port: 8080
    targetPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: rest-dc-2
spec:
  type: ClusterIP
  selector:
    app: rest-dc-2
  ports:
  - port: 8080
    targetPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: grpc-dc-1
spec:
  type: ClusterIP
  selector:
    app: grpc-dc-1
  ports:
  - port: 3000
    targetPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: grpc-dc-2
spec:
  type: ClusterIP
  selector:
    app: grpc-dc-2
  ports:
  - port: 3000
    targetPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: dc-1
spec:
  type: NodePort
  selector:
    app: dc-1
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30081
---

apiVersion: v1
kind: Service
metadata:
  name: dc-1-admin
spec:
  type: NodePort
  selector:
    app: dc-1
  ports:
  - port: 8081
    targetPort: 8081
    nodePort: 30091
---

apiVersion: v1
kind: Service
metadata:
  name: dc-2
spec:
  type: NodePort
  selector:
    app: dc-2
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30082
---

apiVersion: v1
kind: Service
metadata:
  name: dc-2-admin
spec:
  type: NodePort
  selector:
    app: dc-2
  ports:
  - port: 8081
    targetPort: 8081
    nodePort: 30092
